provisioning/kubernetes-manifests/search/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: search-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/issuer: letsencrypt-prod
spec:
  rules:
  - host: search.os2displaykff.reload.dk
    http:
      paths:
        - backend:
            serviceName: search
            servicePort: main-port
          path: /
  tls:
  - hosts:
    - search.os2displaykff.reload.dk
    secretName: search-ingress-cert # cert-manager will populate this.
